# AIHedgefundassignment

./: .gitignore  Dockerfile  README.md  ai_hedge_fund.ipynb  pyproject.toml
data/processed/: AAVE_USDT_test.csv  AAVE_USDT_train.csv  ACE_USDT_test.csv  ACE_USDT_train.csv  ACH_USDT_test.csv  ACH_USDT_train.csv  ACM_USDT_test.csv  ACM_USDT_train.csv  ADA_USDT_test.csv  ADA_USDT_train.csv  ADX_USDT_test.csv  ADX_USDT_train.csv  ALGO_USDT_test.csv  ALGO_USDT_train.csv  ALICE_USDT_test.csv  ALICE_USDT_train.csv  APE_USDT_test.csv  APE_USDT_train.csv  API3_USDT_test.csv  API3_USDT_train.csv  APT_USDT_test.csv  APT_USDT_train.csv  ARB_USDT_test.csv  ARB_USDT_train.csv  ARKM_USDT_test.csv  ARKM_USDT_train.csv  AR_USDT_test.csv  AR_USDT_train.csv  ASR_USDT_test.csv  ASR_USDT_train.csv  ASTR_USDT_test.csv  ASTR_USDT_train.csv  ATM_USDT_test.csv  ATM_USDT_train.csv  ATOM_USDT_test.csv  ATOM_USDT_train.csv  AVAX_USDT_test.csv  AVAX_USDT_train.csv  AVA_USDT_test.csv  AVA_USDT_train.csv  (+268 more)
data/raw/: 1MBABYDOGE_USDT.csv  AAVE_USDT.csv  ACE_USDT.csv  ACH_USDT.csv  ACM_USDT.csv  ACT_USDT.csv  ADA_USDT.csv  ADX_USDT.csv  ALGO_USDT.csv  ALICE_USDT.csv  ALT_USDT.csv  APE_USDT.csv  API3_USDT.csv  APT_USDT.csv  ARB_USDT.csv  ARKM_USDT.csv  AR_USDT.csv  ASR_USDT.csv  ASTR_USDT.csv  ATM_USDT.csv  ATOM_USDT.csv  AVAX_USDT.csv  AVA_USDT.csv  AXS_USDT.csv  BAR_USDT.csv  BCH_USDT.csv  BICO_USDT.csv  BNB_USDT.csv  BNSOL_USDT.csv  BOME_USDT.csv  BONK_USDT.csv  BTC_USDT.csv  CAKE_USDT.csv  CATI_USDT.csv  CFX_USDT.csv  (+131 more)
scripts/: make_notebook.py
src/: backtest.py  data_loader.py  indicators.py
(+10 files in other folders)
