[project]
name = "ai-crypto-hedge-fund"
version = "0.1.0"
description = "AI Crypto Hedge Fund Assignment - CMF Summer School"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "ccxt>=4.2.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0,<2.0.0",
    "vectorbt>=0.26.0",
    "arch>=6.3.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "torch>=2.2.0",
    "pyportfolioopt>=1.5.5",
    "quantstats>=0.0.62",
    "plotly>=5.18.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
